--- a/style.css
+++ b/style.css
@@ -1,107 +1,80 @@
-/* Navigation Bar */
-.navbar {
-  background-color: #ffffff;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+/* CSS for Subscription Cards */
+.card-subscription {
+  border-radius: 10px;
+  border: none;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.card-subscription .card-header {
+  background-color: #2C2F33;
+  color: #fff;
+  font-weight: bold;
+  font-size: 24px;
+  text-align: center;
+  border-radius: 10px 10px 0px 0px;
   padding: 20px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
 }
 
-.navbar-brand {
-  font-size: 32px;
+.card-subscription .card-body {
+  padding: 20px;
+}
+
+.card-subscription .card-body ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.card-subscription .card-body ul li {
+  padding: 10px 0;
+}
+
+.card-subscription .card-body ul li i {
+  margin-right: 10px;
+}
+
+.card-subscription .btn-subscribe {
+  border-radius: 30px;
   font-weight: bold;
-  color: #222222;
-  transition: all 0.3s ease;
-  margin-right: auto;
+  background-color: #FFA000;
+  color: #fff;
+  margin-top: 20px;
 }
 
-.navbar-brand:hover {
-  color: #007bff;
-}
-
-.nav-link {
-  font-size: 18px;
-  color: #222222;
-  transition: all 0.3s ease;
-  margin: 0 10px;
-}
-
-.nav-link:hover {
-  color: #007bff;
-}
-
-/* Main Content */
-.container {
-  margin-top: 50px;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-h1 {
-  font-size: 48px;
-  font-weight: bold;
-  color: #222222;
-  margin-bottom: 20px;
-}
-
-h2 {
-  font-size: 36px;
-  font-weight: bold;
-  color: #007bff;
-  margin-bottom: 20px;
-}
-
-p {
-  font-size: 18px;
-  line-height: 1.5;
-  color: #555555;
-  margin-bottom: 30px;
-}
-
-/* Button */
-.btn-primary {
-  background-color: #007bff;
-  border-color: #007bff;
-  font-size: 18px;
-  font-weight: bold;
-  transition: all 0.3s ease;
-}
-
-.btn-primary:hover {
-  background-color: #0069d9;
-  border-color: #0062cc;
-}
-
-/* Animations */
-@keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-.fadeIn {
-  animation-name: fadeIn;
-  animation-duration: 1s;
-  animation-fill-mode: forwards;
-}
-
-/* Responsive Layout */
-@media (max-width: 768px) {
-  .navbar {
-    flex-direction: column;
+/* Responsive CSS for Subscription Cards */
+@media screen and (min-width: 992px) {
+  .card-subscription {
+    width: 31%;
+    margin-right: 2%;
+    margin-bottom: 0;
+    display: inline-block;
+    vertical-align: top;
   }
 
-  .navbar-brand {
+  .card-subscription:nth-child(3n) {
     margin-right: 0;
-    margin-bottom: 10px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .card-subscription {
+    width: 48%;
+    margin-right: 2%;
+    margin-bottom: 0;
+    display: inline-block;
+    vertical-align: top;
   }
 
-  .nav-link {
-    margin: 10px 0;
+  .card-subscription:nth-child(2n) {
+    margin-right: 0;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .card-subscription {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
   }
 }
